<resources>
    <string name="app_name">chapter4</string>
    <string name="titleName">이름</string>
    <string name="titleBirthday">생년월일</string>
    <string name="titleBloodType">혈액형</string>
    <string name="titlePhoneNumber">비상연락처</string>
    <string name="titleSpecialNote">특이사항</string>
    <string name="bodyName">홍길동</string>
    <string name="bodyBirthday">0000.00.00</string>
    <string name="bodyBloodType">Rh+ A</string>
    <string name="bodyPhoneNumber">000-0000-0000</string>
    <string name="checkBoxSpecialNote">특이사항 노출</string>
    <string name="bodySpecialNote">특이사항 작성란</string>
</resources>