<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/titleGuideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <TextView
        android:id="@+id/titleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleName"
        style="@style/title"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titleBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleBirthday"
        style="@style/title"
        app:layout_constraintTop_toBottomOf="@id/titleName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titleBloodType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleBloodType"
        style="@style/title"
        app:layout_constraintTop_toBottomOf="@id/titleBirthday"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titlePhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlePhoneNumber"
        style="@style/title"
        app:layout_constraintTop_toBottomOf="@id/titleBloodType"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/titleSpecialNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleSpecialNote"
        style="@style/title"
        app:layout_constraintTop_toBottomOf="@id/titlePhoneNumber"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bodyStartGuideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bodyEndGuideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <EditText
        android:id="@+id/bodyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bodyName"
        style="@style/body"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintBaseline_toBaselineOf="@+id/titleName"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/bodyBirthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bodyBirthday"
        style="@style/body"
        app:layout_constraintBaseline_toBaselineOf="@+id/titleBirthday"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/bodyRhType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/titleBloodType"
        app:layout_constraintBottom_toBottomOf="@+id/titleBloodType"
        app:layout_constraintStart_toStartOf="@+id/bodyStartGuideline"
        app:layout_constraintEnd_toStartOf="@+id/bodyBloodType" />

    <Spinner
        android:id="@+id/bodyBloodType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/titleBloodType"
        app:layout_constraintBottom_toBottomOf="@+id/titleBloodType"
        app:layout_constraintStart_toEndOf="@+id/bodyRhType"
        app:layout_constraintEnd_toEndOf="@+id/bodyEndGuideline" />

    <EditText
        android:id="@+id/bodyPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bodyPhoneNumber"
        style="@style/body"
        app:layout_constraintBaseline_toBaselineOf="@+id/titlePhoneNumber"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxSpecialNote"
        app:layout_constraintTop_toTopOf="@id/titleSpecialNote"
        app:layout_constraintBottom_toBottomOf="@+id/titleSpecialNote"
        app:layout_constraintStart_toEndOf="@id/bodyStartGuideline"
        app:layout_constraintEnd_toEndOf="@+id/bodyEndGuideline" />

    <EditText
        android:id="@+id/bodySpecialNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bodySpecialNote"
        android:textSize="15sp"
        style="@style/body"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_save_24"
        style="@style/floatingButton"
        app:layout_constraintVertical_bias="0.95"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>